--- a/client/src/app/pages/not-found/not-found.component.html
+++ b/client/src/app/pages/not-found/not-found.component.html
@@ -4,7 +4,7 @@
         <div  style="text-align:center; ">
     
         <p id="firstT">404</p>
-          <p id="secondT">  Angry Panda has eaten the page you are looking for.</p>
+          <p id="secondT">  Not Found!  </p>
           </div>
 
 </div>
