--- a/client/src/app/properties/view-property/view-property.component.html
+++ b/client/src/app/properties/view-property/view-property.component.html
@@ -15,7 +15,7 @@
           <td style="text-align:right;">Street:</td><td>{{property.street}}</td>
         </tr>
         <tr >
-            <td style="text-align:right;">Deposit:</td><td>{{property.deposit}}€</td>
+            <td style="text-align:right;">Deposit:</td><td>{{property.deposit}}RS</td>
             <td style="text-align:right;">Rooms:</td><td>{{property.rooms}}</td>
         </tr>
       </table>
